[package]
name = "my_dsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_dsp"
path = "src/lib.rs"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
hound = "3.5.1"
num-complex = "0.4"
rand = "0.8.5"
clap = "4.5.23"
csv = "1.3.1"

[dev-dependencies]
rustfft = "6.2.0"
float-cmp = "0.10.0"
